[package]
name = "octokit"
version = "0.0.1"
authors = ["Dennis Sivia <dev@d-coded.de>"]
edition = "2018"

[dependencies]

chrono = { version = "0.4", features = ["serde"] }
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.20"
jsonwebtoken = "6.0.1"
openssl = "0.10.24"